Enhanced cursor: gradient dot with trail, removed ring, updated skills

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 </head>
 
 <body>
+    <!-- Custom Cursor -->
+    <div class="cursor-dot" id="cursor-dot"></div>
+    <div class="cursor-outline" id="cursor-outline"></div>
+
     <!-- 3D Background Canvas -->
     <canvas id="three-canvas"></canvas>
 
@@ -210,20 +214,11 @@
                         </div>
                         <div class="skill-bar-item">
                             <div class="skill-bar-header">
-                                <span>Neural Networks</span>
+                                <span>GenAI & LLMs</span>
                                 <span>85%</span>
                             </div>
                             <div class="skill-bar">
                                 <div class="skill-progress" data-width="85"></div>
-                            </div>
-                        </div>
-                        <div class="skill-bar-item">
-                            <div class="skill-bar-header">
-                                <span>GenAI & LLMs</span>
-                                <span>75%</span>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="75"></div>
                             </div>
                         </div>
                     </div>
@@ -252,15 +247,6 @@
                             </div>
                             <div class="skill-bar">
                                 <div class="skill-progress" data-width="85"></div>
-                            </div>
-                        </div>
-                        <div class="skill-bar-item">
-                            <div class="skill-bar-header">
-                                <span>R</span>
-                                <span>70%</span>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="70"></div>
                             </div>
                         </div>
                     </div>
