Add typing animation with white cursor

--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
                     <span class="title-line">Shubham</span>
                     <span class="title-line gradient-text">Haraniya</span>
                 </h1>
-                <p class="hero-role">Machine Learning & AI Engineer</p>
+                <p class="hero-role">
+                    <span class="typing-text" id="typing-text"></span>
+                    <span class="typing-cursor">|</span>
+                </p>
                 <p class="hero-description">
                     Building intelligent solutions through Machine Learning, Deep Learning, and Generative AI.
                     Transforming complex data into scalable, production-ready AI systems.
