--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         content="Machine Learning & AI Engineer building intelligent, data-driven solutions.">
     <meta property="og:type" content="website">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
     <title>Shubham Haraniya | ML & AI Engineer</title>
 
     <!-- Google Fonts -->
