--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <meta property="og:type" content="website">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png">
+    <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
+    <link rel="icon" type="image/svg+xml" href="favicon.png">
 
     <title>Shubham Haraniya | ML & AI Engineer</title>
 
